[tool.poetry]
name = "leetcode"
version = "0.1.0"
description = ""
authors = ["Kent Chiu <kent.cwg@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "7.1.1"
black = "^22.3.0"


[tool.poetry.scripts]
test = "python -m pytest -s -v"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
